# jentis-llmkit

./: README.md  pyproject.toml
src/jentis/llmkit/: __init__.py
src/jentis/llmkit/Anthropic/: README.md  __init__.py  base.py
src/jentis/llmkit/Google/: README.md  __init__.py  base.py
src/jentis/llmkit/Grok/: README.md  __init__.py  base.py
src/jentis/llmkit/Microsoft/: README.md  __init__.py  base.py
src/jentis/llmkit/Ollamacloud/: README.md  __init__.py  base.py
src/jentis/llmkit/Ollamalocal/: README.md  __init__.py  base.py
src/jentis/llmkit/Openai/: README.md  __init__.py  base.py
src/jentis/llmkit/Vertexai/: README.md  __init__.py  base.py
